[project]
name = "bento-mdf"
version = "0.11.8"
description = "Python driver/validator for Bento Model Description Format"
authors = [{ name = "Mark A. Jensen", email = "mark.jensen@nih.gov" }]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/CBIIT/bento-mdf"
"Bug Tracker" = "https://github.com/CBIIT/bento-mdf/issues"

[tool.poetry]
name = "bento-mdf"
version = "0.11.8"
description = "Python driver/validator for Bento Model Description Format"
authors = [
    "Mark A. Jensen <mark.jensen@nih.gov>",
    "Nelson W. Moore <nelson.moore@essential-soft.com",
]
license = "Apache 2.0"
readme = "README.md"
include = ["templates/pymodel.py.jinja2"]

[tool.poetry.dependencies]
python = "^3.10"
bento-meta = "^0.2.16"
jsonschema = "^4.17.3"
Jinja2 = "3.1.6"
pyyaml = ">=6.0.1"
pydantic = ">=2.10.4"
delfick-project = "^0.7.9"
requests = "^2.28.2"
tqdm = "^4.64.1"
annotated-types = "^0.7.0"
certifi = "^2025.4.26"
setuptools = "^80.9.0"
cryptography = "^45.0.3"
tornado = "^6.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
jsonschema = "^4.17.3"
pyyaml = ">=6.0.1"
tqdm = "^4.64.1"
jupyter = "^1.0.0"
python-semantic-release = "^7.33.0"
pytest-cov = "^4.0.0"
sphinx = "^8.1.3"
myst-nb = { version = "^1.0.0", python = "^3.10" }
sphinx-autoapi = "^3.4.0"
sphinx-rtd-theme = "^3.0.2"

[tool.poetry.scripts]
test_mdf = 'bento_mdf.bin.val_mdf:do_test'
load_mdf = "bento_mdf.bin.load_mdf:main"
diff_mdfs = "bento_mdf.bin.diff_mdfs:main"
test_mdf_cdes = "bento_mdf.bin.val_mdf_cdes:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
major_on_zero = false                       # while major version on 0.y.z, won't bump to 1.0.0
version_source = "tag"                      # temp?

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning"]
