[project]
name = "bento-mdf"
version = "0.12.0"
description = "Python driver/validator for Bento Model Description Format"
authors = [
  { name = "Mark A. Jensen", email = "mark.jensen@nih.gov" },
  { name = "Nelson W. Moore", email = "nelson.moore@essential-soft.com"}
]
requires-python = ">=3.10"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "bento-meta>=0.3.1",
    "jsonschema>=4.17.3,<5.0.0",
    "Jinja2==3.1.6",
    "PyYAML>=6.0.1",
    "pydantic>=2.10.4",
    "delfick-project==0.7.9",
    "requests>=2.32.4,<3.0.0",
    "tqdm>=4.64.1,<5.0.0",
    "annotated-types>=0.7.0,<1.0.0",
    "certifi>=2025.4.26",
    "setuptools>=80.9.0,<81.0.0",
    "cryptography>=45.0.3,<46.0.0",
    "tornado>=6.5.1,<7.0.0",
    "urllib3>=2.5.0,<3.0.0",
    "hatchling>=1.28.0",
]

[project.urls]
"Homepage" = "https://github.com/CBIIT/bento-mdf"
"Bug Tracker" = "https://github.com/CBIIT/bento-mdf/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.2.1,<8.0.0",
    "jupyter>=1.0.0,<2.0.0",
    "jupyterlab>=4.4.9,<5.0.0",
    "python-semantic-release>=7.33.0,<8.0.0",
    "pytest-cov>=4.0.0,<5.0.0",
    "sphinx>=8.1.3,<9.0.0",
    "myst-nb>= 1.0.0,<2.0.0",
    "sphinx-autoapi>=3.4.0,<4.0.0",
    "sphinx-rtd-theme>=3.0.2,<4.0.0"
]

[project.scripts]
test_mdf = 'bento_mdf.bin.val_mdf:do_test'
load_mdf = "bento_mdf.bin.load_mdf:main"
diff_mdfs = "bento_mdf.bin.diff_mdfs:main"
test_mdf_cdes = "bento_mdf.bin.val_mdf_cdes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["templates/pymodel.py.jinja2"]

[tool.hatch.build.targets.wheel]
packages = ["src/bento_mdf"]
sources = ["src"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "master"
changelog_file = "CHANGELOG.md"
build_command = "poetry build"
dist_path = "dist/"
upload_to_release = true
upload_to_pypi = false
remove_dist = false
patch_without_tag = true
major_on_zero = false                       # while major version on 0.y.z, won't bump to 1.0.0
version_source = "tag"                      # temp?

[tool.pytest.ini_options]
filterwarnings = ["ignore::UserWarning"]

#[tool.uv.sources]
#bento-meta = { path = "../../bento-meta/python" }
