[metadata]
name = bento-mdf
version = 0.3.1
author = Mark Jensen
author_email = mark.jensen@nih.gov
maintainer = Mark Jensen
maintainer_email = mark.jensen@nih.gov
description = Python driver/validator for Bento Model Description Format
url = https://github.com/CBIIT/bento-mdf
project_urls =
    Bug Tracker = https://github.com/CBIIT/bento-mdf/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License

[options]
package_dir =
    = MDFValidate
packages = find:
python_requires = >=3.8
scripts =
    test-mdf.py
install_requires =
    jsonschema >=3.0.1
    PyYAML >=5.1.1
    delfick-project
    requests
tests_require =
    jsonschema >=3.0.1
    PyYAML >=5.1.1
    pytest
build_requires =
    build >=0.7.0
    
[options.packages.find]
where = MDFValidate
